--- a/package.json
+++ b/package.json
@@ -45,18 +45,17 @@
   "dependencies": {
     "@babel/runtime": "7.11.2",
     "@types/prismjs": "1.16.1",
+    "node-sass": "^5.0.0",
     "prismjs": "1.21.0",
     "react-markdown": "4.3.1"
   },
   "devDependencies": {
-    "@kkt/loader-less": "5.9.0",
     "@kkt/loader-raw": "5.9.0",
     "@types/react": "16.9.46",
     "@types/react-dom": "16.9.8",
     "@uiw/react-github-corners": "1.2.0",
     "@uiw/react-shields": "1.1.0",
     "@uiw/reset.css": "1.0.4",
-    "compile-less-cli": "1.5.1",
     "kkt": "5.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
